--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -16,33 +16,28 @@
 <body>
     <!--header-->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top sticky-navigation">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
-            aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="ion-grid icon-sm"></span>
         </button>
         <a class="navbar-brand hero-heading" href="#">Mansion Realty</a>
-        <footer class="blockquote-footer">
-            <cite title="Source Title"> "सबका घर हो अपना"</cite>
-        </footer>
+        <p class="blockquote mt-3 hidden-sm-down">
+            <cite title="Source Title">सबका घर हो अपना</cite>
+        </p>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item mr-3">
-                    <a class="nav-link page-scroll" href="#main">Product
-                        <span class="sr-only">(current)</span>
-                    </a>
+                <li class="nav-item mr-3"> <a class="nav-link page-scroll" href="#features">Updates</a>
                 </li>
                 <li class="nav-item mr-3">
-                    <a class="nav-link page-scroll" href="#features">Features</a>
+                    <a class="nav-link page-scroll" href="#pricing">Services</a>
                 </li>
                 <li class="nav-item mr-3">
-                    <a class="nav-link page-scroll" href="#pricing">Pricing</a>
+                    <a class="nav-link page-scroll" href="#team">Testimonials</a>
                 </li>
-                <li class="nav-item mr-3">
-                    <a class="nav-link page-scroll" href="#team">Team</a>
-                </li>
-                <li class="nav-item mr-3">
+                <!-- <li class="nav-item mr-3">
                     <a class="nav-link page-scroll" href="#blog">Blog</a>
-                </li>
+                </li> -->
                 <li class="nav-item mr-3">
                     <a class="nav-link page-scroll" href="#contact">Contact</a>
                 </li>
@@ -51,7 +46,8 @@
     </nav>
 
     <!--main section-->
-    <section class="bg-texture hero" id="main" style="background: url(https://mobirise.com/website-templates/real-estate-website-templates/assets/images/background2.jpg) ">
+    <section class="bg-texture hero" id="main"
+        style="background: url(https://mobirise.com/website-templates/real-estate-website-templates/assets/images/background2.jpg) ">
         <div class="container">
             <div class="row d-md-flex brand">
                 <div class="col-md-6 hidden-sm-down wow fadeIn">
@@ -62,7 +58,8 @@
                     <h2 class="pt-4">Experience
                         <b class="text-primary-light"> Property Purchasing </b>With Mansion Realty</h2>
                     <p class="mt-5">
-                        With over 25 years of work experience, we focus on understanding our clients and their needs and then delivering to them
+                        With over 25 years of work experience, we focus on understanding our clients and their needs and
+                        then delivering to them
                         the right kind of property
                     </p>
                 </div>
@@ -78,9 +75,11 @@
             <div class="row d-md-flex text-white text-center wow fadeIn">
                 <div class="col-sm-4 p-5">
                     <p>
-                        <em class="ion-ios-telephone-outline icon-md"></em>
+                        <a class="ion-ios-telephone-outline icon-md" target="_blank" href="tel:+91-77108-28400" itemprop="telephone" style="color: white"></a>
                     </p>
-                    <p class="lead">077108 28400</p>
+
+
+                    <a class="lead" target="_blank" style="color: white" href="tel:+91-77108-28400" itemprop="telephone">077108 28400</a>
                 </div>
                 <div class="col-sm-4 p-5">
                     <p>
@@ -92,13 +91,14 @@
                     <p>
                         <em class="ion-ios-location-outline icon-md"></em>
                     </p>
-                    <p class="lead">Shop Number 13, Arnica Iris Jangid Enclave, Beverly Park, Mira Road East, Mira Bhayandar, Maharashtra
+                    <p class="lead">Shop Number 13, Arnica Iris Jangid Enclave, Beverly Park, Mira Road East, Mira
+                        Bhayandar, Maharashtra
                         401107
                     </p>
                 </div>
             </div>
         </div>
-    </section>
+    </section>  
 
     <!--footer-->
     <section class="bg-footer" id="connect">
